--- a/_config.yml
+++ b/_config.yml
@@ -5,4 +5,4 @@ the realms of scientific research and the wonders of life. This online platform 
 vessel through which I share my thoughts, experiences, and scientific endeavors with the world.'
 permalink: ':title:output_ext'
 baseurl: '/'
-url: 'https://ucas-zc.github.io&q=main'
+url: ''
